<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">My Nanodegree Apps!</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="soccer_app">SOCCERS APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_message">"This button will launch %s!"</string>
</resources>
